--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -17,6 +17,18 @@
         android:layout_marginBottom="40dp"/>
 
     <EditText
+        android:id="@+id/etNombreRegister"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:hint="Nombre completo"
+        android:textColorHint="#CCFFFFFF"
+        android:textColor="#FFFFFF"
+        android:backgroundTint="#FFFFFF"
+        android:paddingLeft="16dp"
+        android:inputType="textPersonName"
+        android:layout_marginBottom="16dp"/>
+
+    <EditText
         android:id="@+id/etEmailRegister"
         android:layout_width="match_parent"
         android:layout_height="55dp"
@@ -25,6 +37,7 @@
         android:textColor="#FFFFFF"
         android:backgroundTint="#FFFFFF"
         android:paddingLeft="16dp"
+        android:inputType="textEmailAddress"
         android:layout_marginBottom="16dp"/>
 
     <EditText
@@ -36,6 +49,7 @@
         android:textColor="#FFFFFF"
         android:backgroundTint="#FFFFFF"
         android:paddingLeft="16dp"
+        android:inputType="textPassword"
         android:layout_marginBottom="32dp"/>
 
     <Button
