--- a/app/src/main/res/layout/item_gasto.xml
+++ b/app/src/main/res/layout/item_gasto.xml
@@ -3,15 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="10dp"
+    android:layout_marginHorizontal="12dp"
+    android:layout_marginVertical="6dp"
     app:cardCornerRadius="12dp"
-    app:cardBackgroundColor="#243046">
+    app:cardBackgroundColor="#1B263B">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="15dp"
+        android:padding="16dp"
         android:gravity="center_vertical">
 
         <LinearLayout
@@ -21,30 +22,31 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/tvItemTitulo"
+                android:id="@+id/tvTituloGasto"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Título"
+                android:text="Descripción"
                 android:textColor="#FFFFFF"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/tvItemFecha"
+                android:id="@+id/tvFechaGasto"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="12/01/2024 14:30"
-                android:textColor="#CCCCCC"
+                android:text="23/01/2026"
+                android:textColor="#88FFFFFF"
                 android:textSize="12sp" />
         </LinearLayout>
 
         <TextView
-            android:id="@+id/tvItemMonto"
+            android:id="@+id/tvMontoGasto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="$ 0.00"
-            android:textColor="#FF5252"
+            android:textColor="#FFFFFF"
             android:textSize="18sp"
             android:textStyle="bold" />
+
     </LinearLayout>
 </androidx.cardview.widget.CardView>
